# fly-olfactory-learning-model

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: PROJECT_STATUS.md  index.md  repo_map.md
docs/design/: closed_loop_overview.md
docs/runs/stage1/: 20260109_155623_stage1.md  20260109_155954_stage1.md  20260109_163720_stage1.md  20260109_163846_stage1.md  20260109_164003_stage1.md  20260109_164231_stage1.md
docs/runs/stage2/: 20260109_170104_stage2_baseline_v1.md  20260109_170141_stage2_baseline_v1.md
scripts/: log_run.py  update_repo_map.py
stage1_dataset/: pyproject.toml
stage1_dataset/configs/: default.yaml
stage1_dataset/reports/: feature_extraction_qc.md
stage1_dataset/src/fly_olf/: __init__.py
stage1_dataset/src/fly_olf/stage1/: __init__.py  cli.py  config.py  features.py  pipeline.py  protocol_map_builder.py  qc.py  schema.py
stage2_baseline/: README.md  pyproject.toml
stage2_baseline/configs/: default.yaml
stage2_baseline/src/fly_olf/: __init__.py
stage2_baseline/src/fly_olf/stage2_baseline/: __init__.py  cli.py  door_features.py  metrics.py  train_eval.py
